testsuite/tests/typecheck/should_fail/tcfail183.stderr

tcfail183.hs:4:30: error:
    Illegal symbol ‘forall’ in type
    Perhaps you intended to use RankNTypes or a similar language
    extension to enable explicit-forall syntax: forall <tvs>. <type>
